# world-generator

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  compile_flags.txt  main.cpp  shader.frag  shader.vert
.cache/clangd/index/: context.c.FB123BC8EF08BC1B.idx  egl_context.c.E069F2EE3BCD21F9.idx  fractional-scale-v1-client-protocol-code.h.A15BB2FB885E9F5D.idx  fractional-scale-v1-client-protocol.h.E7ECC4235315D304.idx  glad.c.40B5AC7ED765D0A0.idx  glad.h.A0D335D2CEF6B6E0.idx  glfw3.h.B7CE9D6439BC6E75.idx  glfw3native.h.72F33E9A620D8024.idx  glx_context.c.A35A5B2F54490CD7.idx  idle-inhibit-unstable-v1-client-protocol-code.h.7958963ADC4C6325.idx  idle-inhibit-unstable-v1-client-protocol.h.CE8244A52D63D2D5.idx  init.c.C27557DE6B2525AE.idx  input.c.862E2894D379DAF6.idx  internal.h.BEDECDB7FDA12665.idx  khrplatform.h.4367743B1DC89081.idx  linux_joystick.c.028C971AA0F14E6A.idx  linux_joystick.h.2CC9E5D289A6FE9B.idx  main.cpp.6E66EC30F0B719DD.idx  mappings.h.42438722DE1BD454.idx  monitor.c.C657CEC93AA2D72B.idx  null_init.c.AE1D8FAC62BD2D2B.idx  null_joystick.c.C7F7F8B23B1B62C3.idx  null_joystick.h.306408AE96737A90.idx  null_monitor.c.A972F1B8D2B29411.idx  null_platform.h.247818E6F155232D.idx  null_window.c.7779A6D7C3792FBB.idx  osmesa_context.c.B684ABF203BFCCE3.idx  platform.c.7C06C6AD2B92F767.idx  platform.h.387795ED90E07AE5.idx  pointer-constraints-unstable-v1-client-protocol-code.h.C5B5BC69902473CD.idx  pointer-constraints-unstable-v1-client-protocol.h.6031C327A7149498.idx  posix_module.c.23F5CBBCB01F5F80.idx  posix_poll.c.74C8052BE495B46D.idx  posix_poll.h.E8607B5DC98D00DD.idx  posix_thread.c.D700B945E2EEC3AD.idx  (+28 more)
legacy-version/: world-generator.cpp
libraries/glad/src/: glad.c
src/: GLManager.hpp  currentDir.hpp  main.cpp  shader.frag  shader.vert  shader_s.hpp
src/funcs/: funcs.hpp
src/glThings/: GLManager.hpp
src/shaders/: shader.frag  shader.vert
(+1 files in other folders)
